--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
             </div>
             {% endfor %}
             {% endif %}
-            <div class="d-flex flex-column" style="min-height: 80vh;"> 
+            <div class="d-flex flex-column wrapper" style="min-height: 80vh;"> 
             {% block content %}
             {% endblock content %}
             </div>
