--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -26,7 +26,7 @@
     }
     .form-wrapper::before {
         content: "";
-        font-family: "Font Awesome 5 Free"; font-weight:900; content: "\f2bd";
+        font-family: "Font Awesome 5 Free"; font-weight:900; content: "\f2bd";
         font-size: 6em;
         position: absolute;
         top: -77px;
