--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -4,6 +4,9 @@
 {% block style %}
 <style>
     .wrapper{
+        background: -webkit-linear-gradient(to top left, #33ccff 0%, #ff99cc 100%)
+        background: -o-linear-gradient(to top left, #33ccff 0%, #ff99cc 100%);
+        background: -moz-linear-gradient(to top left, #33ccff 0%, #ff99cc 100%);
         background: linear-gradient(to top left, #33ccff 0%, #ff99cc 100%);
         background-size: 400% 400%;
         animation: gradient 15s ease infinite;
@@ -47,7 +50,7 @@
         <div class='col-10 text-white py-5 rounded form-wrapper d-flex justify-content-center flex-column align-items-center col-md-5'>
             <transition mode="out-in" appear enter-active-class="animate__animated animate__zoomIn">
                 <div v-if="showlogin" key="login">
-                    <p>Don't have an account? Then please <button @click="showform" class="btn btn-sm text-info px-0">Sign up</button></p>
+                    <p>Don't have an account? then please <button @click="showform" class="btn btn-sm text-info px-0">sign up</button></p>
                     <form method="post" action="{% url 'accounts:login' %}">
                         {% crispy form %}
                         <input class='btn text-uppercase font-weight-bolder text-monospace text-white border-white mt-3 w-100 rounded-0 btn-md' style="background-color:#000000;font-size:12px;" name="submit" type="submit" value="Log In"/>
@@ -58,7 +61,7 @@
                     <a href="{% url 'password_reset' %}" class="small text-right text-decoration-none text-primary my-2 d-block font-italic">forgotten password?</a>
                 </div>
                 <div v-if="showsignup" key="signup">
-                    <p>Already have an account? Then please <button @click="showform" class="btn btn-sm text-info px-0">Login</button></p>
+                    <p>Already have an account? then please <button @click="showform" class="btn btn-sm text-info px-0">login</button></p>
                     <form method="post" action="{% url 'accounts:signup' %}">
                         {% crispy signupform %}
                         <input class='btn text-white font-weight-bolder text-uppercase text-monospace border-white mt-3 w-100 rounded-0 btn-md' style="background-color:#000000;font-size:12px;" name="submit" type="submit" value="Create My Account"/>
