--- a/templates/cart/checkout.html
+++ b/templates/cart/checkout.html
@@ -5,9 +5,9 @@
 
 {% block style %}
 <style>
-.wrapper{
-        background: linear-gradient(to left, #6b8872 0%, #f47E3A 100%);
-        background-size: 200% 200%;
+{% comment %} .wrapper{
+        background: linear-gradient(-90deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+        background-size: 400% 400%;
         animation: gradient 15s ease infinite;
     }
     @keyframes gradient {
@@ -20,12 +20,25 @@
         100% {
             background-position: 0% 50%;
         }
+    } {% endcomment %}
+    .form-control{
+        border : 1px solid rgba(220, 53, 69, 0.21);
+    }
+    form {
+        color: #dc3545;
+    }
+    fieldset{
+        border: 0px dashed #cc8aca;
+    }
+    legend{
+        padding: 0px 5px;
+        width: auto;
     }
 </style>
 {% endblock style %}
 {% block content %}
-<div class="container px-md-0 mb-4" id="checkoutapp">
-    <div class='row justify-content-center' v-if="!billing_profile">
+<div class="container-fluid px-0 mb-4" id="checkoutapp">
+    <div class='row no-gutters justify-content-center' v-if="!billing_profile">
         <transition enter-active-class="animate__animated animate__fadeIn">
             <div class='col-12 col-md-6 my-5' v-if="showlogin">
                 <div class="card border-0 bg-transparent">
@@ -48,12 +61,17 @@
             </div>
         </transition>
     </div>
-    <div class='row no-gutters justify-content-md-center' v-else>
-        <div class='col-12'>
+    <div class='row no-gutters justify-content-center' v-else>
+        {% comment %} <div class="col-12 align-items-baseline animate__animated animate__slideInDown animate__delay-1s animate__slow" style="background-color:#b7daaf;left:0;">
+            <div class="d-inline-flex">
+                <p class="h2 font-weight-light px-2">Place Order</p>&nbsp;&nbsp;
+            </div>
+        </div> {% endcomment %}
+        {% comment %} <div class='col-12'>
             <p class='lead font-weight-bolder'>Place Order</p>
             <hr/>
-        </div>
-        <div class="col-12 col-md-10 align-content-between">
+        </div> {% endcomment %}
+        <div class="col-10 align-content-between">
             {% if address %}
             {% comment %} <div class="card-deck">
                 <div class="card mx-0 rounded-0 animate__animated animate__fadeIn animate__delay-1s">
@@ -105,7 +123,7 @@
                     </form>
                 </div>
             </div> {% endcomment %}
-            <div class="accordion" id="accordionExample">
+            <div class="accordion my-5" id="accordionExample">
                 <div class="card bg-transparent">
                     <div class="card-header" id="headingOne" style="background-color:#766596;border-bottom:2px solid white;">
                     <h2 class="mb-0">
@@ -145,7 +163,7 @@
                     <div class="card-header" id="headingTwo" style="background-color:rgb(255 203 123);border-bottom:2px solid white;">
                     <h2 class="mb-0">
                         <button class="btn btn-link text-white text-monospace font-weight-bolder text-uppercase btn-block text-decoration-none collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            <i class="fas fa-luggage-cart"></i> Order
+                            <i class="fas fa-luggage-cart"></i> Order #{{ object.order_id }}
                         </button>
                     </h2>
                     </div>
