--- a/templates/assets/navbar.html
+++ b/templates/assets/navbar.html
@@ -20,12 +20,12 @@
             {% endif %}
         </span> {% endcomment %}
         <ul class="list-unstyled list-group font-weight-bold mobile p-2 list-group-flush mt-5" id="mobile">
-            <li class="{% if 'categories/' not in request.path and 'account/' not in request.path  %}active {% endif %}list-group-item d-flex menu-list bg-transparent">
-                <i class="fas fa-home text-success"></i>&nbsp;<a href="/">HOME</a>
+            <li class="{% if 'categories/' not in request.path and 'account/' not in request.path and 'cart/' not in request.path %}active {% endif %}list-group-item d-flex menu-list bg-transparent">
+                <i class="fas fa-home text-white-50"></i>&nbsp;<a href="/">HOME</a>
             </li>
             {% menu %}
             <li class="list-group-item mt-4 d-flex menu-list bg-transparent">
-                <i class="fas fa-search text-danger">&nbsp;</i>&nbsp;<a role="button" @click="showModal=true" class="btn btn-link p-0" data-toggle="modal" data-target="#searchModal">SEARCH</a>
+                <i class="fas fa-search text-success">&nbsp;</i>&nbsp;<a role="button" class="btn btn-link p-0 font-weight-bold" data-toggle="modal" data-target="#searchModal">SEARCH</a>
             </li>
         </ul>
         <ul class="list-unstyled list-group font-weight-bold fixed-bottom list-group-horizontal" id="login">
@@ -72,30 +72,27 @@
                     <a href="/"><img src="{% static 'image/favicon.ico' %}" class="logo-image" /></a>
                 </div>
                 <ul class="flex-grow-1 mx-lg-2 d-flex justify-content-between justify-content-lg-around animate__animated animate__fadeInDownBig animate__slow list-unstyled desktop font-weight-bold list-group list-group-horizontal">
-                    <li class="border-0 px-1 {% if 'categories/' not in request.path and 'account/' not in request.path  %}active {% endif %}list-group-item bg-transparent">
-                        <i class="fas fa-home"></i> <a href="/">HOME</a>
+                    <li class="border-0 px-1 d-lg-none d-xl-block {% if 'categories/' not in request.path and 'account/' not in request.path and 'cart/' not in request.path %}active {% endif %}list-group-item bg-transparent">
+                        <a href="/"><i class="fas fa-home"></i>&nbsp;HOME</a>
                     </li>
                     {% menu %}
                 </ul>
-                <ul class="list-unstyled animate__animated animate__fadeInDownBig animate__slow list-group font-weight-bold list-group-horizontal" style="color: rgba(15, 15, 15, 0.63);">
-                    <li id="cartnav" class=" mx-1"> 
-                        <a id="" href="{% url 'cart:cart-detail' %}" class="cart">
-                            <i class="fas fa-box-open position-relative align-middle text-center"></i> CART ( <span v-if="numItems > 0">[[ numItems ]]</span><span v-else>0</span> ) 
+                <ul class="list-unstyled desktop-menu-right animate__animated animate__fadeInDownBig animate__slow list-group font-weight-bold list-group-horizontal" style="color: rgba(15, 15, 15, 0.63);">
+                    <li id="cartnav" class="{% if 'cart/' in request.path %}active {% endif %}px-0 list-group-item border-0 bg-transparent d-flex"> 
+                        <a id="" href="{% url 'cart:cart-detail' %}" class="cart my-auto">
+                            <i class="fas fa-box-open text-primary position-relative align-middle text-center"></i>&nbsp;CART&nbsp;(&nbsp;<span v-if="numItems > 0">[[ numItems ]]</span><span v-else>0</span>&nbsp;)&nbsp;<span>|</span>
                         </a>
                     </li>
-                    {% if not request.user.is_authenticated %}
-                    <li class="{% if 'login/' in request.path  %}active {% endif %}px-1 mx-1 border-0 list-group-item py-0  bg-transparent" style="">
-                        <a href="{% url 'accounts:login' %}" class="text-center">LOGIN</a>
+                    <li class="list-group-item bg-transparent border-0 px-2 px-xl-4">
+                        <a role="button" class="btn px-0 btn-link font-weight-bold text-decoration-none" data-toggle="modal" data-target="#searchModal"><i class="fas fa-search text-success"></i>&nbsp;SEARCH</a>&nbsp;<span>|</span>
                     </li>
-                    <li class="{% if 'signup/' in request.path  %}active {% endif %}px-1 mx-1 border-0 list-group-item py-0 bg-transparent" style="">
-                        <a href="{% url 'accounts:signup' %}" class="text-center">SIGN UP</a>
+                    {% if not request.user.is_authenticated %}
+                    <li class="{% if 'login/' in request.path or 'signup/' in request.path %}active {% endif %}px-0 d-flex align-items-center border-0 list-group-item bg-transparent" style="">
+                        <a href="{% url 'accounts:login' %}" class="text-center align-text-bottom my-auto">LOGIN</a>&nbsp;<span class="text-warning">|</span>&nbsp;<a href="{% url 'accounts:signup' %}" class="text-center my-auto">SIGN UP</a>
                     </li>
                     {% else %}
-                    <li class="{% if 'account/dashboard/' in request.path  %}active {% endif %}px-1 mx-1 border-0 list-group-item py-0 bg-transparent" style="">
-                        <a href="{% url 'accounts:account-home' %}" class="text-center">MY ACCOUNT</a>
-                    </li>
-                    <li class="{% if 'logout/' in request.path  %}active {% endif %}px-1 mx-1 border-0 list-group-item py-0 bg-transparent" style="">
-                        <a href="{% url 'accounts:logout' %}" class="text-center">LOGOUT</a>
+                    <li class="{% if 'account/dashboard/' in request.path %}active {% endif %}d-flex align-items-center px-0 border-0 list-group-item bg-transparent" style="">
+                        <a href="{% url 'accounts:account-home' %}" class="text-center my-auto">MY ACCOUNT</a>&nbsp;<span class="text-warning">|</span>&nbsp;<a href="{% url 'accounts:logout' %}" class="text-center my-auto">LOGOUT</a>
                     </li>
                     {% endif %}
                 </ul>
@@ -103,25 +100,26 @@
         </div>
     </nav>
     {% comment %} <transition enter-active-class="animate__animated animate__zoomIn animate__faster" leave-active-class="animate__animated animate__slideOutDown animate__faster"> {% endcomment %}
-        <div class="modal animate__animated animate__zoomIn animate__faster" id="searchModal" style="z-index:10000;" tabindex="-1" role="dialog" aria-labelledby="searchModalTitle" aria-hidden="true">
-            <div class="modal-dialog h-100 m-0" role="document">
-                <div class="modal-content h-100">
-                <div class="modal-header">
-                    <button type="button" class="close" data-custom-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body" method="GET">
-                    <form>
-                        {% comment %} <div class="form-group"> {% endcomment %}
-                        <div class="input-group mb-3">
-                            <input type="text" class="form-control search border-bottom border-top-0 border-right-0 border-left-0 rounded-0" id="InputSearch" autofocus>
-                            <div class="input-group-append">
-                                <span class="input-group-text search-button bg-transparent border-left-0 border-top-0 border-right-0 rounded-0" id="basic-addon1"><i class="fas fa-search"></i></span>
+        <div class="modal animate__animated animate__zoomIn animate__fast" id="searchModal" style="z-index:10000;" tabindex="-1" role="dialog" aria-labelledby="searchModalTitle" aria-hidden="true">
+            <div class="modal-dialog h-100 vw-100 m-0" role="document">
+                <div class="modal-content h-100 vw-100">
+                    <div class="modal-header border-bottom-0">
+                        <button type="button" class="close text-danger" data-custom-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true" class="display-4">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body" method="GET">
+                        <div class="col-12 mx-auto">
+                        <form>
+                            <div class="input-group mb-3">
+                                <input type="text" class="form-control search border-bottom border-top-0 border-right-0 border-left-0 rounded-0" id="InputSearch" name=query type="search" placeholder="search..." aria-label="Search" style="line-height:3rem;font-size:2rem;">
+                                <div class="input-group-append">
+                                    <button class="px-1 btn btn-link text-decoration-none search-button bg-transparent border-bottom border-left-0 border-top-0 border-right-0 rounded-0" type="submit" id="basic-addon1"><i class="fas fa-search h3 text-success"></i></span>
+                                </div>
                             </div>
+                        </form>
                         </div>
-                    </form>
-                </div>
+                    </div>
                 </div>
             </div>
         </div>
