--- a/static/css/base.css
+++ b/static/css/base.css
@@ -172,7 +172,7 @@ a:focus {
     border-top-width: 0px;
     border-bottom: 2px solid #007bff;
 }
-.list-group.desktop-menu-right .list-group-item.active {
+.list-group.desktop-menu-right .list-group-item.active, .list-group.desktop-menu-right .list-group-item a.active {
     color:#c15b5b !important;
 }
 .list-group#login{
